@@ -7,7 +7,8 @@ the format string contains a column accessor to specify which CSV
 column to use, so for example '%3$d' would format the third column
 as a decimal value.
 
-csvprintf can also convert CSV files into XML and JSON documents.
+csvprintf can also convert CSV files into XML and JSON documents
+and Bash variable assignments suitable for eval(1).
 
 See INSTALL for installation instructions.
 
