@@ -1,6 +1,7 @@
 #!/bin/sh
 
 set -e
+set -o pipefail
 
 FAILED_TESTS=''
 for INPUT_FILE in *.in; do
@@ -9,6 +10,8 @@ for INPUT_FILE in *.in; do
     OUTPUT_FILE3A=`echo "${INPUT_FILE}" | sed -n 's/\.in$/.out3a/gp'`
     OUTPUT_FILE3B=`echo "${INPUT_FILE}" | sed -n 's/\.in$/.out3b/gp'`
     OUTPUT_FILE4=`echo "${INPUT_FILE}" | sed -n 's/\.in$/.out4/gp'`
+    OUTPUT_FILE5A=`echo "${INPUT_FILE}" | sed -n 's/\.in$/.out5a/gp'`
+    OUTPUT_FILE5B=`echo "${INPUT_FILE}" | sed -n 's/\.in$/.out5b/gp'`
     echo "*** testing ${INPUT_FILE}..." 1>&2
     if ! ../csvprintf -x -f "${INPUT_FILE}" | diff -u "${OUTPUT_FILE1}" -; then
         echo "*** FAILED: [1] ${INPUT_FILE}" 1>&2
@@ -33,6 +36,14 @@ for INPUT_FILE in *.in; do
     if ! ../csvprintf -ix -f "${INPUT_FILE}" | diff -u "${OUTPUT_FILE4}" -; then
         echo "*** FAILED: [4] ${INPUT_FILE}" 1>&2
         FAILED_TESTS="${FAILED_TESTS} ${INPUT_FILE}/${OUTPUT_FILE4}"
+    fi
+    if ! ../csvprintf -b -f "${INPUT_FILE}" | diff -u "${OUTPUT_FILE5A}" -; then
+        echo "*** FAILED: [5a] ${INPUT_FILE}" 1>&2
+        FAILED_TESTS="${FAILED_TESTS} ${INPUT_FILE}/${OUTPUT_FILE5A}"
+    fi
+    if ! ../csvprintf -ib -f "${INPUT_FILE}" | diff -u "${OUTPUT_FILE5B}" -; then
+        echo "*** FAILED: [5b] ${INPUT_FILE}" 1>&2
+        FAILED_TESTS="${FAILED_TESTS} ${INPUT_FILE}/${OUTPUT_FILE5B}"
     fi
 done
 
