@@ -1,0 +1,1 @@
+foo='value1'; col2='value2'; col3='value3';
