@@ -1,3 +1,7 @@
+Version Next
+
+    - Added "-b" flag for new Bash output mode
+
 Version 1.2.1 released November 24, 2021
 
     - Fixed bug where "-x" flag was behaving like "-X"
